fix: fix select visible change

--- a/style.css
+++ b/style.css
@@ -79,11 +79,12 @@ input[type="text"]{
 }
 
 .main{
+  width: 102%;
   padding-bottom: 20px;
 }
 
 .list{
-  height: 370px;
+  height: 50vh;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -112,8 +113,8 @@ input[type="text"]{
   justify-content: space-between;
   align-items: center;
   box-shadow: 0px 0px 14px -3px var(--second-color);
-  width: 90%;
-  margin: 25px 15px;
+  width: 94%;
+  margin: 25px auto;
   border-radius: 3px;
   transform: translateX(0px);
   z-index: -1;
@@ -214,6 +215,7 @@ input:checked + .task__flag_active {
   text-align: center;
   background-color: var(--fourth-color);
   color: var(--first-color);
+  display: none;
   opacity: 0;
   cursor: pointer;
 }
@@ -226,6 +228,7 @@ input:checked + .task__flag_active {
 }
 
 .select .select__option.select__option_change {
+  display: block;
   opacity: 1;
 }
 
